examples/test/testpolicy16811.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16811
  namespace: namespace316
spec:
  podSelector:
    matchLabels:
      key8: value22
      key46: value31
      key28: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value6
      podSelector:
        matchLabels:
          key34: value1
          key31: value42
